<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Network Chat</string>
    <string name="action_settings">Settings</string>
    <string name="text1">Email</string>
    <string name="text2">Pasword</string>
    <string name="text3">To Enter</string>
    <string name="text4">To Register</string>
    <string name="text5">Options</string>
    <string name="remindbuttonAccept">Accept</string>
    <string name="remindbuttonCancel">Cancel</string>
    <string name="remind">To remind a password</string>
    <string name="info">it is the internet chat for an exchange by reports</string>

</resources>