<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/luxfon1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/picsGolden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/andshield" />

    <EditText
        android:id="@+id/field1"
        android:layout_width="230dp"
        android:layout_height="15pt"
        android:layout_below="@id/picsGolden"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bakgraund1"
        android:hint="@string/text1"
        android:paddingLeft="8dp"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/field2"
        android:layout_width="230dp"
        android:layout_height="15pt"
        android:layout_below="@id/field1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/bakgraund1"
        android:hint="@string/text2"
        android:paddingLeft="8dp"
        android:textSize="8pt" />

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="15pt"
        android:layout_below="@id/field2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        tools:context=".MainActivity" >

        <Button
            android:id="@+id/fieldEnter"
            android:layout_width="wrap_content"
            android:layout_height="15pt"
            android:layout_weight="1"
            android:background="@color/colorA"
            android:text="@string/text3"
            android:textColor="@android:color/primary_text_dark" />

        <Button
            android:id="@+id/fieldReg"
            android:layout_width="wrap_content"
            android:layout_height="15pt"
            android:layout_weight="1"
            android:background="@color/colorB"
            android:onClick="onRegistryClick"
            android:text="@string/text4"
            android:textColor="@android:color/primary_text_dark" />
    </LinearLayout>

</RelativeLayout>